# sfl-database

./: .env.example  .gitignore  Cargo.toml
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.jsx  api.js  config.js
frontend/src/components/: AdminLayout.jsx  EmptyState.jsx  ErrorState.jsx  Footer.jsx  Header.jsx  ImageWithFallback.jsx  LoadingSpinner.jsx  MarkdownEditor.jsx  Pagination.jsx  ScholarCard.jsx
frontend/src/hooks/: useResponsivePagination.js
frontend/src/pages/: AuthCallback.jsx  Home.jsx  Login.jsx  News.jsx  ScholarDetail.jsx  Scholars.jsx  TagDetail.jsx  Tags.jsx
frontend/src/pages/admin/: AdminDashboard.jsx  Dashboard.jsx  IdentitiesManagement.jsx  IdentityForm.jsx  ImagesManagement.jsx  NewsForm.jsx  NewsManagement.jsx  RAGConsole.jsx  ScholarDetailAdmin.jsx  ScholarForm.jsx  ScholarsManagement.jsx  TagForm.jsx  TagsManagement.jsx  UsersManagement.jsx
migrations/: 20251125000000_initial_schema.sql  20260206000001_add_roles_and_pending_changes.sql  20260206000002_remove_admin_column.sql  20260206000003_remove_pending_changes.sql  20260206000004_remove_locking.sql  20260206000005_add_soft_delete_and_visibility.sql  20260220000006_add_trigram_search_indexes.sql  20260222000007_add_pgvector_embeddings.sql  20260301000008_add_featured_to_tags.sql
src/: constants.rs  db.rs  handlers.rs  main.rs  middleware.rs  models.rs  utils.rs
src/db/: identities.rs  images.rs  news.rs  rag.rs  refresh_tokens.rs  scholars.rs  tags.rs  users.rs
src/handlers/: auth.rs  identities.rs  images.rs  news.rs  rag.rs  scholars.rs  tags.rs  users.rs
src/models/: common.rs  history.rs  identity.rs  image.rs  news.rs  rag.rs  scholar.rs  tag.rs  user.rs
