[package]
name = "sfl-database"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"
actix-files = "0.6.10"

tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.32"

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "migrate"] }

jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
sha2 = "0.10.9"
base64 = "0.22.1"
openidconnect = { version = "4.0.1", features = ["reqwest"] }

reqwest = { version = "0.13.2", features = ["json"] }
chrono = { version = "0.4.43", features = ["serde"] }
cuid2 = "0.1.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

dotenvy = "0.15.7"
env_logger = "0.11.9"
log = "0.4.29"
thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"] }
subtle = "2.6.1"
moka = { version = "0.12.13", features = ["future"] }
# RAG dependencies
pgvector = { version = "0.4.1", features = ["sqlx"] }
openai-api-rs = "9.0.1"